[gd_scene load_steps=14 format=3 uid="uid://doslp77la0i1f"]

[ext_resource type="Script" uid="uid://532age48nhpv" path="res://UI/scripts/playerHud.gd" id="1_hsh3e"]
[ext_resource type="PackedScene" uid="uid://mc7qvthaiy4y" path="res://Player/scenes/Passive.tscn" id="2_gxxtl"]
[ext_resource type="PackedScene" uid="uid://c8411fpc13xh8" path="res://UI/scenes/healthBar.tscn" id="3_3nxoe"]
[ext_resource type="PackedScene" uid="uid://h81tp37drcdi" path="res://UI/scenes/Skill.tscn" id="4_c6clf"]
[ext_resource type="Texture2D" uid="uid://b82q0ts00h7dd" path="res://Player/assets/AttackSprite01.png" id="5_m5jv7"]
[ext_resource type="Texture2D" uid="uid://lis8t7de7m4o" path="res://Player/assets/move FX.png" id="6_xj3oi"]
[ext_resource type="Texture2D" uid="uid://c6j4dr3f36lqt" path="res://UI/assets/icons/healing.png" id="7_sla3s"]
[ext_resource type="Texture2D" uid="uid://de5v1effpgbbn" path="res://UI/assets/icons/blood.png" id="8_fypug"]
[ext_resource type="Texture2D" uid="uid://das5clqw0bcfd" path="res://UI/assets/icons/bone.png" id="10_27b7c"]
[ext_resource type="Texture2D" uid="uid://3i27qjfhqkw0" path="res://UI/assets/icons/scratch.png" id="10_wm5yh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sla3s"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fypug"]
bg_color = Color(0.2, 0.6, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27b7c"]
bg_color = Color(0, 0, 0, 0.815686)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[node name="PlayerUI" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_hsh3e")

[node name="StatsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 67.0
offset_top = -201.0
offset_right = 1067.0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Passive" parent="StatsContainer" instance=ExtResource("2_gxxtl")]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Container" type="VBoxContainer" parent="StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="HealthContainer" type="VBoxContainer" parent="StatsContainer/Container"]
layout_mode = 2

[node name="HealthVal" type="Label" parent="StatsContainer/Container/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.607843, 0.639216, 0.764706, 1)
theme_override_font_sizes/font_size = 48
text = "100/100"

[node name="HealthBar" parent="StatsContainer/Container/HealthContainer" instance=ExtResource("3_3nxoe")]
self_modulate = Color(0.608777, 0.637453, 0.766432, 1)
custom_minimum_size = Vector2(400, 16)
layout_mode = 2
size_flags_horizontal = 0
rounded = true

[node name="GaugeContainer" type="HBoxContainer" parent="StatsContainer/Container"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GaugeMeter" type="ProgressBar" parent="StatsContainer/Container/GaugeContainer"]
custom_minimum_size = Vector2(175, 12)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_sla3s")
theme_override_styles/fill = SubResource("StyleBoxFlat_fypug")
value = 50.0
show_percentage = false

[node name="GaugeValue" type="Label" parent="StatsContainer/Container/GaugeContainer"]
layout_mode = 2
text = "0/100"
horizontal_alignment = 1

[node name="Skills" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -240.0
offset_right = 170.0
offset_bottom = 210.0
grow_vertical = 2

[node name="Skill" parent="Skills" groups=["PlayerAbilities"] instance=ExtResource("4_c6clf")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 30.0
offset_right = 55.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Skills/Skill"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -18.5
offset_right = 18.5
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_m5jv7")
region_rect = Rect2(330, 0, 52, 64)

[node name="Skill2" parent="Skills" groups=["PlayerAbilities"] instance=ExtResource("4_c6clf")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -280.0
offset_right = 55.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Skills/Skill2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_xj3oi")
region_rect = Rect2(9, 19, 11, 9)

[node name="Skill3" parent="Skills" groups=["PlayerAbilities"] instance=ExtResource("4_c6clf")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = 85.0
offset_right = 140.0
offset_bottom = 195.0
grow_vertical = 2

[node name="StagSkill" type="NinePatchRect" parent="Skills/Skill3"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_sla3s")

[node name="WolfSkill" type="NinePatchRect" parent="Skills/Skill3"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_fypug")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 1670.0
offset_top = 940.0
offset_right = 1870.0
offset_bottom = 1015.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_27b7c")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarksHBox" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/VBoxContainer/MarksHBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("10_wm5yh")

[node name="Marks" type="Label" parent="PanelContainer/VBoxContainer/MarksHBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "0"

[node name="TreatsHBox" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/VBoxContainer/TreatsHBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("10_27b7c")

[node name="Treats" type="Label" parent="PanelContainer/VBoxContainer/TreatsHBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "0"

[connection signal="value_changed" from="StatsContainer/Container/HealthContainer/HealthBar" to="." method="_on_health_bar_value_changed"]
